objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>total_categorie_A__c</fullName>
        <label>Dont Catégorie A</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Id_entree_de_catalogue__c</field>
            <operation>equals</operation>
            <value>01uw000000mpmFtAAI</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>type_de_formation__c</fullName>
        <label>Type de formation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OPP-TF10</fullName>
                </value>
                <value>
                    <fullName>OPP-TF20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>x18caracteres_Contact__c</fullName>
        <description>Id Salesforce sur 18 caractères du contact</description>
        <formula>CASESAFEID(Contact_central__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>x18caracteres_Contact</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>Contact_central__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Formation_courte</value>
        </filters>
        <filters>
            <field>Contact_central__c</field>
            <operation>contains</operation>
            <value>test</value>
        </filters>
        <label>Toutes les opportunités tests</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Alumni_MBA</fullName>
        <columns>Nom_Prenom__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>equals</operation>
            <value>ALUMNI TRACK MBA</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Clos (Perdu)</value>
        </filters>
        <filters>
            <field>Sous_provenance__c</field>
            <operation>contains</operation>
            <value>alumni</value>
        </filters>
        <label>opp alumni track</label>
        <language>fr</language>
        <sharedTo>
            <group>Utilisateurs_EML</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CASA_Vue_Opp_GBBA_Casa</fullName>
        <columns>Nom_Prenom__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Exercice__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Statut_Dossier_CANEL__c</columns>
        <columns>Statut_Canel__c</columns>
        <columns>Provenance__c</columns>
        <columns>A_d_sactiv_son_int_r_t__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>Global BBA Casablanca</value>
        </filters>
        <label>CASA Vue Opp GBBA Casa</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Longue</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CASA_toutes_opps_Casa</fullName>
        <columns>Nom_Prenom__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Date_de_Cr_ation_fiche_UI__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>Casa</value>
        </filters>
        <filters>
            <field>Exercice__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>CASA_toutes opps Casa</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>CA_Vue_Opp_PGM_Casa</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact_central__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>PGM Casablanca</value>
        </filters>
        <label>CASA Vue Opp PGM Casa</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Longue</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Casa_Modif_suiveur</fullName>
        <columns>Nom_Prenom__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Provenance__c</columns>
        <columns>Exercice__c</columns>
        <columns>OwnerId__c</columns>
        <columns>Contact_Pays_de_R_sidence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>Casa</value>
        </filters>
        <label>CASA_Modif suiveur</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Dipl_me_par_la_VAE</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact_central__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ExerciceNum_ro__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>equals</operation>
            <value>Diplôme par la VAE</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Programme_Long_Dipl_mant</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Clos (Perdu)</value>
        </filters>
        <label>FC Diplôme par la VAE</label>
        <language>fr</language>
        <sharedTo>
            <group>Admin_Campagnes_EML</group>
            <group>Administrateurs_Dipl_m_s</group>
            <group>Administrateurs_Opportunit_s</group>
            <group>Admins_BDD</group>
            <group>BDD</group>
            <group>Commerciaux_droit_Taxe</group>
            <group>Coordination_RE</group>
            <group>Droits_Acces_Contacts_Professionnels</group>
            <group>Droits_acc_s_Contacts_Etudiants</group>
            <group>Droits_acc_s_Contacts_Formation_Initiale</group>
            <group>EML</group>
            <group>EML_Alumni_Track</group>
            <group>EML_Autres_Programmes_Longs</group>
            <group>EML_EXEC_Masters</group>
            <group>EML_Manager</group>
            <group>EML_Marketing</group>
            <group>EML_Programmes_Courts</group>
            <group>EML_Programmes_Intra</group>
            <group>EML_VAE</group>
            <group>EXEC_Master</group>
            <group>Interface</group>
            <group>Intra_en_lecture</group>
            <group>Manager_ACE_RE</group>
            <group>Manager_Taxe</group>
            <group>Opp_AMP</group>
            <group>Opp_Executive_MBA</group>
            <group>Opp_FC_Courte</group>
            <group>Opp_FC_Longue</group>
            <group>Opp_Intra</group>
            <group>Opp_PGM</group>
            <group>Opp_VAE</group>
            <group>R_le_Fundraising</group>
            <group>Recette_Lot_2015</group>
            <group>T_l_conseillers_Externes</group>
            <group>Transverse_EMBA_IMBA</group>
            <group>Transverse_Programmes_Longs</group>
            <group>Utilisateurs_EML</group>
            <group>Vue_Transverse_IMBA</group>
            <group>Vues_EML_non_retenues</group>
            <group>Vues_Employabilite</group>
            <group>Vues_FC_Ind_terminee</group>
            <group>Vues_FC_Longue</group>
            <group>Vues_Forever</group>
            <group>Vues_Formation_Courte</group>
            <group>Vues_Formation_Intra</group>
            <group>Vues_Fundraising</group>
            <group>Vues_Opp_DUA</group>
            <group>Vues_Opp_EML_non_retenues</group>
            <group>Vues_Taxe</group>
            <group>fusion_contacts</group>
            <group>interface2</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FC_Executive_MBA_de_Janvier_2016</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Date_de_d_but__c</columns>
        <columns>ExerciceNum_ro__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>equals</operation>
            <value>Executive MBA</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>11/2/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Intéressé par,Prospect qualifié</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>sabou</value>
        </filters>
        <label>FC_Executive MBA de Janvier 2016 - SABOU</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
            <group>Opp_FC_Longue</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FC_Executive_MBA_de_Janvier_2016_SABOU</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Contact_central__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Date_de_d_but__c</columns>
        <columns>ExerciceNum_ro__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>equals</operation>
            <value>Executive MBA</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>11/2/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Prospect probable,Prospect chaud</value>
        </filters>
        <label>FC_Executive MBA de Janvier 2016 - CESQ</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
            <group>Opp_FC_Longue</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FI_MAJ_Prospect_BBA_bas_s_en_Asie_1</fullName>
        <columns>Nom_Prenom__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact_Pays_de_R_sidence__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Contact_Canal_d_acquisition__c</columns>
        <columns>Date_de_Cr_ation_fiche_UI__c</columns>
        <columns>OwnerId__c</columns>
        <columns>Formule_nb_oppo_total__c</columns>
        <columns>Formule_nb_oppo_cours__c</columns>
        <columns>Eligibilite__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Statut_Canel__c</columns>
        <columns>Exercice__c</columns>
        <columns>Statut_Dossier_CANEL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Pays_de_R_sidence__c</field>
            <operation>contains</operation>
            <value>Chine,Taiwan</value>
        </filters>
        <filters>
            <field>Exercice__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>equals</operation>
            <value>Global Bachelor in Business Administration</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Formation_initiale</value>
        </filters>
        <label>FI MAJ Prospects BBA basés en Asie 1</label>
        <language>en_US</language>
        <sharedTo>
            <group>Vues_DPM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FI_MAJ_Prospects_BBA_bas_s_en_Asie_2</fullName>
        <columns>Nom_Prenom__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact_Pays_de_R_sidence__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Date_de_Cr_ation_fiche_UI__c</columns>
        <columns>OwnerId__c</columns>
        <columns>Formule_nb_oppo_total__c</columns>
        <columns>Formule_nb_oppo_cours__c</columns>
        <columns>Eligibilite__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Statut_Canel__c</columns>
        <columns>Exercice__c</columns>
        <columns>Statut_Dossier_CANEL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Pays_de_R_sidence__c</field>
            <operation>contains</operation>
            <value>Macao,Malaisie,Mongolie,Myanmar,Népal,Pakistan,Philippines,Singapour,Sri Lanka</value>
        </filters>
        <filters>
            <field>Exercice__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>equals</operation>
            <value>Global Bachelor in Business Administration</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Formation_initiale</value>
        </filters>
        <label>FI_MAJ_Prospects BBA basés en Asie 2</label>
        <language>fr</language>
        <sharedTo>
            <group>Vues_DPM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FI_MAJ_Prospects_BBA_bas_s_en_Asie_3</fullName>
        <columns>Nom_Prenom__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact_Pays_de_R_sidence__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Date_de_Cr_ation_fiche_UI__c</columns>
        <columns>OwnerId__c</columns>
        <columns>Formule_nb_oppo_total__c</columns>
        <columns>Formule_nb_oppo_cours__c</columns>
        <columns>Eligibilite__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Statut_Canel__c</columns>
        <columns>Exercice__c</columns>
        <columns>Statut_Dossier_CANEL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Pays_de_R_sidence__c</field>
            <operation>contains</operation>
            <value>Inde,Bangla,Bhoutan,Cambodge,Corée,Hong-Kong,Indonésie,Japon,Thaïlande,Viet Nam</value>
        </filters>
        <filters>
            <field>Exercice__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>equals</operation>
            <value>Global Bachelor in Business Administration</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Formation_initiale</value>
        </filters>
        <label>FI MAJ Prospects BBA basés en Asie 3</label>
        <language>fr</language>
        <sharedTo>
            <group>Vues_DPM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FI_MAJ_statut_comm_interet_suppl_CLB</fullName>
        <columns>Nom_Prenom__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Formule_nb_oppo_total__c</columns>
        <columns>Formule_nb_oppo_cours__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Ann_e_du_dipl_me__c</columns>
        <columns>Domaine_d_tudes__c</columns>
        <columns>Exercice__c</columns>
        <columns>Niveau_d_tudes__c</columns>
        <columns>Contact_Dernier_Dipl_me_ou_en_cours__c</columns>
        <columns>Niveau_d_exp_rience_professionnelle__c</columns>
        <columns>Contact_Etablissement__c</columns>
        <columns>Statut_Dossier_CANEL__c</columns>
        <columns>Statut_Canel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exercice__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Lopez</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Intérêt Supplémentaire</value>
        </filters>
        <label>FI MAJ statut comm intérêt suppl CLB</label>
        <language>fr</language>
        <sharedTo>
            <group>Vues_DPM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FI_MAJ_statut_commercial_canel_CLB1</fullName>
        <columns>Nom_Prenom__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Formule_nb_oppo_total__c</columns>
        <columns>Formule_nb_oppo_cours__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Statut_Dossier_CANEL__c</columns>
        <columns>Statut_Canel__c</columns>
        <columns>Remplissage_Dossier_CANEL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exercice__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Lopez</value>
        </filters>
        <filters>
            <field>Statut_Canel__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>FI MAJ statut commercial/canel CLB</label>
        <language>fr</language>
        <sharedTo>
            <group>Vues_DPM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FI_MAJ_statut_commercial_canel_E_LANDURE</fullName>
        <columns>Nom_Prenom__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Formule_nb_oppo_total__c</columns>
        <columns>Formule_nb_oppo_cours__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Statut_Canel__c</columns>
        <columns>Statut_Dossier_CANEL__c</columns>
        <columns>Remplissage_Dossier_CANEL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Statut_Canel__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Exercice__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>landure</value>
        </filters>
        <label>FI MAJ statut commercial/canel LANDURE</label>
        <language>fr</language>
        <sharedTo>
            <group>Vues_DPM</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Formation_courte</fullName>
        <active>true</active>
        <businessProcess>Formation continue courte</businessProcess>
        <description>Concerne le processus de la formation continue courte</description>
        <label>Formation courte</label>
    </recordTypes>
    <recordTypes>
        <fullName>Formation_initiale</fullName>
        <active>true</active>
        <businessProcess>Formation initiale</businessProcess>
        <label>Formation initiale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fundraising_B2C</fullName>
        <active>true</active>
        <businessProcess>Fundraising</businessProcess>
        <label>Fundraising B2C</label>
    </recordTypes>
    <recordTypes>
        <fullName>Intra_entreprise</fullName>
        <active>true</active>
        <businessProcess>Intra</businessProcess>
        <description>Regroupe le Sur-Mesure et l&apos;intra &quot;Standard&quot;</description>
        <label>Formation intra-entreprise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partenariat_Fundraising</fullName>
        <active>true</active>
        <businessProcess>Fundraising</businessProcess>
        <label>Partenariat Fundraising</label>
    </recordTypes>
    <recordTypes>
        <fullName>Programme_Long_Dipl_mant</fullName>
        <active>true</active>
        <businessProcess>Programme  Long Diplômant</businessProcess>
        <description>Formation continue longue</description>
        <label>Programme Long Diplômant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Relations_Employeur</fullName>
        <active>true</active>
        <businessProcess>Relations Employeur</businessProcess>
        <label>Relations Employeur</label>
    </recordTypes>
    <recordTypes>
        <fullName>Taxe</fullName>
        <active>true</active>
        <businessProcess>Taxe</businessProcess>
        <description>Taxe d&apos;apprentissage</description>
        <label>Taxe</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EML_statut_et_produit</fullName>
        <active>true</active>
        <description>Le produit doit être renseigné afin de faire évoluer le statut commercial de l&apos;opportunité</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(
OR( 
RecordType.Name = &quot;Formation intra-entreprise&quot;,
RecordType.Name = &quot;Programme Long Diplômant&quot;,
RecordType.Name = &quot;Formation courte&quot;),
ISCHANGED(StageName),
 Nombre_de_produits__c = 0
) 
)</errorConditionFormula>
        <errorMessage>Le produit doit être renseigné afin de faire évoluer le statut commercial de l&apos;opportunité</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exercice_EMLYON_ReadOnly_pour_DPM</fullName>
        <active>true</active>
        <description>Restrictions en lecture seule sur le champ Exercice EMLYON pour le profil DPM</description>
        <errorConditionFormula>AND(ISCHANGED(Exercice__c),
NOT(ISPICKVAL(PRIORVALUE( Exercice__c),&quot;&quot;)),
$Profile.Name= &quot;DPM&quot;
)</errorConditionFormula>
        <errorMessage>Vous ne pouvez pas modifier la valeur du champ Exercice EMLYON</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_OPPO_01_DON_001</fullName>
        <active>true</active>
        <description>Règle de validation qui empêchera la création d&apos;une opportunité sans contact central par un utilisateur avec un profil &quot;Interface&quot;</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND ( $Profile.Name = &quot;Interface&quot; , ISBLANK( Contact_central__c ) 
)
)</errorConditionFormula>
        <errorMessage>Contact central est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_OPPO_01_IHM_003</fullName>
        <active>false</active>
        <description>« Motif de fermeture » est obligatoire pour le passage du statut « A réorienter »</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
and(
 ISPICKVAL(StageName,&quot;A (ré)orienter&quot;), 
 ISPICKVAL(Motif_de_fermeture__c,&quot;&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Motif_de_fermeture__c</errorDisplayField>
        <errorMessage>Remplir un motif de fermeture</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_OPPO_01_IHM_004</fullName>
        <active>true</active>
        <description>« Motif de fermeture » est obligatoire pour le passage du statut «Clos (Perdu)»</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
and(
 ISPICKVAL(StageName,&quot;Clos (Perdu)&quot;), 
 ISPICKVAL(Motif_de_fermeture__c,&quot;&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Motif_de_fermeture__c</errorDisplayField>
        <errorMessage>Remplir un motif de fermeture</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_OPP_Proprietaire</fullName>
        <active>true</active>
        <description>Upsert côté demi interface kerensen, donc règle indiquant qu&apos;on a  pas le droit de changer le propriétaire si le nouveau est interface.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND( 
OR( 
RecordType.Name = &quot;Formation intra-entreprise&quot;,
RecordType.Name = &quot;Programme Long Diplômant&quot;,
RecordType.Name = &quot;Formation courte&quot;),
ISCHANGED(  OwnerId  ),
OwnerId =  &quot;005w000000411Oy&quot;
)
)</errorConditionFormula>
        <errorMessage>Upsert côté demi interface kerensen, donc règle indiquant qu&apos;on a  pas le droit de changer le propriétaire si le nouveau est interface.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_OPP_ProprietaireInterface2</fullName>
        <active>true</active>
        <description>Upsert côté demi interface kerensen, donc règle indiquant qu&apos;on a  pas le droit de changer le propriétaire si le nouveau est interface2.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND( 
OR( 
RecordType.Name = &quot;Formation intra-entreprise&quot;,
RecordType.Name = &quot;Programme Long Diplômant&quot;,
RecordType.Name = &quot;Formation courte&quot;),
ISCHANGED(  OwnerId  ),
OwnerId =  &quot;005w0000004vswC&quot;
)
)</errorConditionFormula>
        <errorMessage>Upsert côté demi interface kerensen, donc règle indiquant qu&apos;on a  pas le droit de changer le propriétaire si le nouveau est interface.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Opportunite01_NomCompte</fullName>
        <active>false</active>
        <description>Permet de vérifier que le compte associé soit le même que le compte du contact associé.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
NOT(  ISNEW()  )
&amp;&amp;
( 
Account.Id    &lt;&gt;    Contact_central__r.Account.Id
)</errorConditionFormula>
        <errorMessage>Le compte associé à l&apos;opportunité est différent du compte du contact associé.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Somme_Montant_Echeancier</fullName>
        <active>true</active>
        <description>Lorsque un échéancier existe, alors pour passer le statut commercial à offre à valider, il faut que le montant de l&apos;opp soit = à la somme échéancier.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(
RecordType.Name = &quot;Formation intra-entreprise&quot;,
ISPICKVAL( StageName , &quot;Offre à valider&quot;),
Somme_Montant_Ech_ancier__c &lt;&gt; 0,
 Amount &lt;&gt; Somme_Montant_Ech_ancier__c
)
)</errorConditionFormula>
        <errorMessage>Le montant de l&apos;opportunité est différente du montant de l&apos;échéancier</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Statut_contrat_signe</fullName>
        <active>true</active>
        <description>Pour passer au statut « contrat signé », le statut doit être « accord de principe »</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND( 
RecordType.Name = &quot;Formation intra-entreprise&quot;, 
NOT ISPICKVAL(PRIORVALUE(StageName), &quot;Accord de principe&quot;) , 
ISPICKVAL(StageName, &quot;Contrat signé&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Pour passer au statut « contrat signé», le statut doit être « accord de principe »</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Statut_offre_envoyee</fullName>
        <active>true</active>
        <description>Pour passer au statut « offre envoyée », le statut doit être « offre validée »</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND( 
RecordType.Name = &quot;Formation intra-entreprise&quot;, 
NOT ISPICKVAL(PRIORVALUE(StageName), &quot;Offre validée&quot;) ,
ISPICKVAL(StageName, &quot;Offre envoyée&quot;)
) 
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Pour passer au statut « offre envoyée », le statut doit être « offre validée »</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Statut_offre_validee_sans_marge</fullName>
        <active>true</active>
        <description>Pour passer au statut « offre validée », une marge prévisionnelle doit être inscrite</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND( 
RecordType.Name = &quot;Formation intra-entreprise&quot;, 
ISBLANK( Marge_Previsionnelle__c ),
ISPICKVAL(StageName, &quot;Offre validée&quot;)
) 
)</errorConditionFormula>
        <errorMessage>Pour passer au statut « offre validée », une marge prévisionnelle doit être inscrite</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Taxe_Montant</fullName>
        <active>true</active>
        <description>Seuls un admin et les utilisateurs profil MANAGER TAXE peuvent modifier le montant.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(
NOT(OR($Profile.Name = &quot;Administrateur système&quot;, $Profile.Name = &quot;MANAGER TAXE&quot; )),
 RecordType.Name = &quot;Taxe&quot;,
OR(
ISCHANGED( Amount )  ,
AND( ISNEW(),
Amount &gt; 0 )
)
)
)</errorConditionFormula>
        <errorMessage>Seuls un admin et les utilisateurs profil MANAGER TAXE peuvent modifier le montant.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Taxe_StatutConclu</fullName>
        <active>true</active>
        <description>Seuls un admin et les utilisateurs profil MANAGER TAXE peuvent passer l&apos;opportunité à Conclu.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(
NOT(OR($Profile.Name = &quot;Administrateur système&quot;, $Profile.Name = &quot;MANAGER TAXE&quot; )),
 RecordType.Name = &quot;Taxe&quot;,
ISPICKVAL( StageName , &quot;Conclu&quot;) 
)
)</errorConditionFormula>
        <errorMessage>Seuls un admin et les utilisateurs profil MANAGER TAXE peuvent passer l&apos;opportunité à Conclu.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_echeancier_versus_montant</fullName>
        <active>true</active>
        <description>Le montant échéancier ne peut pas être supérieur au montant de l&apos;opportunité</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(
RecordType.Name = &quot;Formation intra-entreprise&quot;,
Somme_Montant_Ech_ancier__c &gt; Amount
)
)</errorConditionFormula>
        <errorMessage>Le total des échéanciers est supérieur au montant de l&apos;opportunité</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Un_seul_produit_par_opportunite</fullName>
        <active>true</active>
        <description>Impossibilité de sélectionner plus d&apos;un produit par opportunité</description>
        <errorConditionFormula>RecordType.Name =  &quot;Relations Employeur&quot;  &amp;&amp;   Nombre_de_produits__c &gt;= 2</errorConditionFormula>
        <errorMessage>Impossibilité de sélectionner plus d&apos;un produit par opportunité, veuillez créer une nouvelle opportunité.</errorMessage>
    </validationRules>
</CustomObject>